--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,5 +21,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#F7C119"
+  "background_color": "#FFFFFF"
 }
